--- a/src/views/products/producto.ejs
+++ b/src/views/products/producto.ejs
@@ -47,7 +47,7 @@
                 </section>
                      <%} else { %> 
                      <section>
-                         <a class="btn--agregar" href="/products/form/<%= birra.id %>">Modificar</a>
+                         <a class="btn--agregar" href="/products/modificarForm/<%= birra.id %>">Modificar</a>
                    </section>
                     <% } %> 
 
