--- a/src/views/users/logeoExitoso.ejs
+++ b/src/views/users/logeoExitoso.ejs
@@ -12,7 +12,7 @@
         <br>
         <% if(usuarioAdmin){%>
         <button href="index" class="btn--volver">
-            <a class="volverInicio" href="/products/form">Crear,modificar,borrar</a>
+            <a class="volverInicio" href="/products/createForm">Crear nuevo producto</a>
         </button>
         <%}%>
         <button href="index" class="btn--volver">
