--- a/src/views/products/modificar_producto.ejs
+++ b/src/views/products/modificar_producto.ejs
@@ -19,7 +19,7 @@
             </ul>
         <% } %> 
 
-        <form action="/products/crear" method="POST" class="reg__form" enctype="multipart/form-data">
+        <form action="/products/modificarProducto" method="POST" class="reg__form" enctype="multipart/form-data">
             <label for="nombre">Nombre</label>
             <input class="reg--input" type= "text" name="nombre" placeholder="NOMBRE DEL PRODUCTO" value="<%= typeof oldValues != "undefined" ? oldValues.nombre : "" %>" autofocus required>
             <label for="tipo">Estilo</label>
