cambie formulario creacion produco

--- a/src/views/products/creacionExitosa.ejs
+++ b/src/views/products/creacionExitosa.ejs
@@ -6,7 +6,7 @@
     <%-include('./partials/header.ejs')%>
 
     <main class="contenedorMain">
-      <p>Creaste la cerveza llamada: <%= newBeer.nombre %> !</p> 
+      <p>Creaste la cerveza llamada "<%= newBeer.nombre %>" !</p> 
 
     </main>
     
