--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,13 +14,12 @@
             </section>
             <form class="formFiltroHome" action="/" method="POST">
             <section class="cont__select__venTodas"> 
-            <select onchange="this.form.submit()" class="select--tcerveza" name="tipoCerveza">
+            <select onchange="this.form.submit()" class="select--tcerveza" name="estilo_id">
                 <!-- hacer select dinamico -->
                 <option class="select--option" value="" disabled selected>TIPO DE CERVEZA</option>
-                <option class="select--option" value="ipa">IPA</option>
-                <option class="select--option" value="rubia">Rubia</option>
-                <option class="select--option" value="negra">Negra</option>
-                <option class="select--option" value="roja">Roja</option>
+              <%estilos.forEach(element => { %>
+                <option class="select--option" value="<%= element.id %>"><%= element.nombre %></option>
+              <% }); %>
             </select>
            
             <input type="submit" name="eleccion" value="mas-vendidas" class="btn--vent"></input>
