--- a/src/views/products/sumar_producto.ejs
+++ b/src/views/products/sumar_producto.ejs
@@ -24,7 +24,13 @@
             <input class="reg--input" type= "text" name="nombre" placeholder="NOMBRE DEL PRODUCTO" value="<%= typeof oldValues != "undefined" ? oldValues.nombre : "" %>" autofocus required>
 
             <label for="tipo">Estilo</label>
-            <input class="reg--input" type= "text" name="nombre" placeholder="NOMBRE DEL PRODUCTO" value="<%= typeof oldValues != "undefined" ? oldValues.nombre : "" %>" autofocus required>
+            <select class="reg--input" name="estilo_id">
+                <!-- hacer select dinamico -->
+                <option class="select--option" value="" disabled selected>TIPO DE CERVEZA</option>
+              <%estilos.forEach(element => { %>
+                <option class="select--option" value="<%= element.id %>"><%= element.nombre %></option>
+              <% }); %>
+            </select>
 
             <label for="ibu">IBU</label>
             <input class="reg--input" type="number" name="ibu" placeholder="IBU"  value="<%= typeof oldValues != "undefined" ? oldValues.ibu : "" %>" autofocus required>
