--- a/src/views/products/sumar_producto.ejs
+++ b/src/views/products/sumar_producto.ejs
@@ -36,13 +36,13 @@
             <input class="reg--input" type="number" name="ibu" placeholder="IBU"  value="<%= typeof oldValues != "undefined" ? oldValues.ibu : "" %>" autofocus required>
             
             <label for="graduación">Graduacion</label>
-            <input class="reg--input" type="number" name="alcohol" placeholder="GRADUACIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.graduacion : "" %>" autofocus required>
+            <input class="reg--input" type="number" name="alcohol" placeholder="GRADUACIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.alcohol : "" %>" autofocus required>
 
             <label for="descripción">Descripcion</label>
             <input class="reg--input" type="textarea" name="descripcion" placeholder="DESCRIPCIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.descripcion : "" %>" autofocus required>
 
             <label for="mililitros">Militros</label>
-            <input class="reg--input" type="number" name="tamano" value="<%= typeof oldValues != "undefined" ? oldValues.mililitros : "" %>" placeholder="MILILITROS" autofocus required>
+            <input class="reg--input" type="number" name="tamano" value="<%= typeof oldValues != "undefined" ? oldValues.tamano : "" %>" placeholder="MILILITROS" autofocus required>
 
             <label for="categoria">Categoria</label>
             <select class="reg--input" name="categoria" id="">
@@ -57,10 +57,8 @@
             <label for="stock">Stock</label>
             <input class="reg--input" type="number" name="stock" placeholder="STOCK" id="stock" value="<%= typeof oldValues != "undefined" ? oldValues.stock : "" %>"autofocus required>
 
-            <label for="Imagen">Imagen</label>
-            <input class="reg--input" type="file" name="imagen" placeholder="IMG">
-
-
+            <label for="laimagen">Imagen</label>
+            <input type="file" name="imagen" id="laimagen">
             <!-- Submit -->
             <input class="reg--submit" type="submit" value="GUARDAR" autofocus>            
         
