--- a/src/views/products/modificar_producto.ejs
+++ b/src/views/products/modificar_producto.ejs
@@ -22,27 +22,44 @@
         <form action="/products/modificarProducto" method="POST" class="reg__form" enctype="multipart/form-data">
             <label for="nombre">Nombre</label>
             <input class="reg--input" type= "text" name="nombre" placeholder="NOMBRE DEL PRODUCTO" value="<%= typeof oldValues != "undefined" ? oldValues.nombre : "" %>" autofocus required>
+
             <label for="tipo">Estilo</label>
-            <input class="reg--input" type= "text" name="tipo" placeholder="TIPO DEL CERVEZA" value="<%= typeof oldValues != "undefined" ? oldValues.tipo : "" %>" autofocus required>
-            <label for="descripción">Descripcion</label>
-            <input class="reg--input" type="textarea" name="descripcion" placeholder="DESCRIPCIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.descripcion : "" %>" autofocus required>
-            <label for="graduación">Graduacion</label>
-            <input class="reg--input" type="number" name="graduacion" placeholder="GRADUACIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.graduacion : "" %>" autofocus required>
+            <select class="reg--input" name="estilo_id">
+                <!-- hacer select dinamico -->
+                <option class="select--option" value="" disabled selected>TIPO DE CERVEZA</option>
+              <%estilos.forEach(element => { %>
+                <option class="select--option" value="<%= element.id %>"><%= element.nombre %></option>
+              <% }); %>
+            </select>
+
             <label for="ibu">IBU</label>
             <input class="reg--input" type="number" name="ibu" placeholder="IBU"  value="<%= typeof oldValues != "undefined" ? oldValues.ibu : "" %>" autofocus required>
+            
+            <label for="graduación">Graduacion</label>
+            <input class="reg--input" type="number" name="alcohol" placeholder="GRADUACIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.alcohol : "" %>" autofocus required>
+
+            <label for="descripción">Descripcion</label>
+            <input class="reg--input" type="textarea" name="descripcion" placeholder="DESCRIPCIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.descripcion : "" %>" autofocus required>
+
             <label for="mililitros">Militros</label>
-            <input class="reg--input" type="number" name="mililitros" value="<%= typeof oldValues != "undefined" ? oldValues.mililitros : "" %>" placeholder="MILILITROS" autofocus required>
-            <label for="Imagen">Imagen</label>
-            <input class="reg--input" type="file" name="imagen" placeholder="IMG">
+            <input class="reg--input" type="number" name="tamano" value="<%= typeof oldValues != "undefined" ? oldValues.tamano : "" %>" placeholder="MILILITROS" autofocus required>
+
             <label for="categoria">Categoria</label>
             <select class="reg--input" name="categoria" id="">
                 <option class="select--option" value="" disabled selected>"<%= typeof oldValues != "undefined" ? oldValues.categoria : "CATEGORÍA" %>"</option>
                 <option value="mas-vendidas">más-vendidas</option>
                 <option value="estandar">estándar</option>
             </select>
+
             <label for="precio">Precio</label>
             <input class="reg--input" type="number" name="precio" placeholder="PRECIO" id="precio" value="<%= typeof oldValues != "undefined" ? oldValues.precio : "" %>"autofocus required>
-            
+
+            <label for="stock">Stock</label>
+            <input class="reg--input" type="number" name="stock" placeholder="STOCK" id="stock" value="<%= typeof oldValues != "undefined" ? oldValues.stock : "" %>"autofocus required>
+
+            <label for="laimagen">Imagen</label>
+            <input type="file" name="imagen" id="laimagen">
+            <!-- Submit -->
             <input class="reg--submit" type="submit" value="GUARDAR" autofocus>            
         
         </form>
