--- a/src/views/products/modificar_producto.ejs
+++ b/src/views/products/modificar_producto.ejs
@@ -19,43 +19,48 @@
             </ul>
         <% } %> 
 
-        <form action="/products/modificarProducto" method="POST" class="reg__form" enctype="multipart/form-data">
+        <form action="/products/modificarProducto/<%=modifbirra.id%>" method="POST" class="reg__form" enctype="multipart/form-data">
             <label for="nombre">Nombre</label>
-            <input class="reg--input" type= "text" name="nombre" placeholder="NOMBRE DEL PRODUCTO" value="<%= typeof oldValues != "undefined" ? oldValues.nombre : "" %>" autofocus required>
+            <input class="reg--input" type= "text" name="nombre" placeholder="NOMBRE DEL PRODUCTO" value="<%= typeof oldValues != "undefined" ? oldValues.nombre : modifbirra.nombre %>" autofocus required>
 
             <label for="tipo">Estilo</label>
             <select class="reg--input" name="estilo_id">
                 <!-- hacer select dinamico -->
                 <option class="select--option" value="" disabled selected>TIPO DE CERVEZA</option>
               <%estilos.forEach(element => { %>
+                <% if(modifbirra.estilo_id === element.id){ %> 
+                <option class="select--option" value="<%= element.id %>"selected><%= element.nombre %></option>
+              <% }else{%>
                 <option class="select--option" value="<%= element.id %>"><%= element.nombre %></option>
-              <% }); %>
+              <% } %> 
+              <%}); %>
             </select>
+                
 
             <label for="ibu">IBU</label>
-            <input class="reg--input" type="number" name="ibu" placeholder="IBU"  value="<%= typeof oldValues != "undefined" ? oldValues.ibu : "" %>" autofocus required>
+            <input class="reg--input" type="number" name="ibu" placeholder="IBU"  value="<%= typeof oldValues != "undefined" ? oldValues.ibu :modifbirra.ibu %>" autofocus required>
             
             <label for="graduación">Graduacion</label>
-            <input class="reg--input" type="number" name="alcohol" placeholder="GRADUACIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.alcohol : "" %>" autofocus required>
+            <input class="reg--input" type="number" name="alcohol" placeholder="GRADUACIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.alcohol : modifbirra.alcohol %>" autofocus required>
 
             <label for="descripción">Descripcion</label>
-            <input class="reg--input" type="textarea" name="descripcion" placeholder="DESCRIPCIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.descripcion : "" %>" autofocus required>
+            <input class="reg--input" type="textarea" name="descripcion" placeholder="DESCRIPCIÓN" value="<%= typeof oldValues != "undefined" ? oldValues.descripcion : modifbirra.descripcion %>" autofocus required>
 
             <label for="mililitros">Militros</label>
-            <input class="reg--input" type="number" name="tamano" value="<%= typeof oldValues != "undefined" ? oldValues.tamano : "" %>" placeholder="MILILITROS" autofocus required>
+            <input class="reg--input" type="number" name="tamano" value="<%= typeof oldValues != "undefined" ? oldValues.tamano : modifbirra.tamano %>" placeholder="MILILITROS" autofocus required>
 
             <label for="categoria">Categoria</label>
             <select class="reg--input" name="categoria" id="">
-                <option class="select--option" value="" disabled selected>"<%= typeof oldValues != "undefined" ? oldValues.categoria : "CATEGORÍA" %>"</option>
+                <option class="select--option" value="" disabled selected>"<%= typeof oldValues != "undefined" ? oldValues.categoria : modifbirra.categoria%>"</option>
                 <option value="mas-vendidas">más-vendidas</option>
                 <option value="estandar">estándar</option>
             </select>
 
             <label for="precio">Precio</label>
-            <input class="reg--input" type="number" name="precio" placeholder="PRECIO" id="precio" value="<%= typeof oldValues != "undefined" ? oldValues.precio : "" %>"autofocus required>
+            <input class="reg--input" type="number" name="precio" placeholder="PRECIO" id="precio" value="<%= typeof oldValues != "undefined" ? oldValues.precio : modifbirra.precio %>"autofocus required>
 
             <label for="stock">Stock</label>
-            <input class="reg--input" type="number" name="stock" placeholder="STOCK" id="stock" value="<%= typeof oldValues != "undefined" ? oldValues.stock : "" %>"autofocus required>
+            <input class="reg--input" type="number" name="stock" placeholder="STOCK" id="stock" value="<%= typeof oldValues != "undefined" ? oldValues.stock : modifbirra.stock %>"autofocus required>
 
             <label for="laimagen">Imagen</label>
             <input type="file" name="imagen" id="laimagen">
