modificar contrasena y pagina de modif

--- a/src/views/users/modifUsuario.ejs
+++ b/src/views/users/modifUsuario.ejs
@@ -9,7 +9,7 @@
       
         <section class= "registro">
             <p class="registrate"><%=  usuarioActivo.nombre +" "+usuarioActivo.apellido%></p>
-            <a class="link_log" href="/users/login">Cambiar contraseña</a>
+            <a class="link_log" href="/users/cambiopass">Cambiar contraseña</a>
         </section>
 
         <% if(typeof Usererrors != "undefined") {%> 
