arreglamos include estilo

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,11 +35,11 @@
         <% if (typeof cervezas != 'undefined'){ %> 
             <% cervezas.forEach(element =>{ %> 
             <article class="cont__producto">
-                <a href="/products/<%= element.nombre %>">
+                <a href="/products/<%= element.id %>">
                 <img class="producto--img" src="./img/products/<%= element.imagen %>" alt="birraA">
                 </a>
                 <article class="producto__info">
-                    <a href="/products/<%= element.nombre %>"><%= element.nombre + ' ' + element.alcohol +"%" %></a>
+                    <a href="/products/<%= element.id %>"><%= element.nombre + ' ' + element.alcohol +"%" %></a>
                     <section class="info--precioMl">
                     <p><%= element.tamano %>ML</p>
                     <p>$<%= element.precio %></p>
