--- a/src/views/products/producto.ejs
+++ b/src/views/products/producto.ejs
@@ -14,12 +14,12 @@
                 
             <article class="cont__titl__btn__agregar--pp">
                 <article class="producto__titl--pp">
-                    <section class="color_estilo-<%= birra.tipo %>"></section>
+                    <section class="color_estilo-<%= birra.estilo.nombre %>"></section>
                     <p class="nombre--ppp"><%= birra.nombre %>
                     </p>
                     
                     <article class="detalle_birra">
-                    <p class="nombre--pp"><%= birra.estilos %></p>
+                    <p class="nombre--pp"><%= birra.estilo.nombre %></p>
                     <p class="nombre--pp"><%= birra.ibu + " ibu"%>
                     </p>
                     </article>
