--- a/src/views/products/modificar_producto.ejs
+++ b/src/views/products/modificar_producto.ejs
@@ -68,7 +68,7 @@
             <input class="reg--submit" type="submit" value="GUARDAR" autofocus>            
         
         </form>
-        <form class="elFormDelete" action="/products/form/<%= typeof oldValues != "undefined" ? oldValues.id + "/borrar?_method=DELETE" : "nborrar" %>" method="POST">
+        <form class="elFormDelete" action="/products/form/<%=modifbirra.id%>/borrar?_method=DELETE" method="POST">
             <input class="reg--submit--eliminar" type="submit" value="ELIMINAR" autofocus>
         </form>
 
