agregue alerts para modificar y borrar productos y mejore un poco el css de esos mismos botones

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -816,6 +816,7 @@ background-color:#61892F;
     display: flex;
     justify-content: space-between;
     padding-top: .3vh;
+    margin-bottom: 8%;
 }
 
 .cont__cant__agregar{
@@ -1146,6 +1147,7 @@ ojo con este que se usa en varios lados */
     border: none;
     cursor: pointer;
     transition: 0.4s all;
+    margin:5%;
 }
 
 .reg--submit:hover{
@@ -1165,7 +1167,6 @@ ojo con este que se usa en varios lados */
     font-size: 1.4rem;
     border: none;
     cursor: pointer;
-    margin-top: 10%;
     margin-bottom: 5%;
     transition: 0.4s all;
     
@@ -1775,8 +1776,9 @@ ojo con este que se usa en varios lados */
     }
 
     .reg--submit{
-        margin-top: 10%;
-        font-size: 0.9rem;
+        margin-top: 8%;
+        margin-bottom: -4%;
+        font-size: .9rem;
         height: 8vh;
         width: 65%;
     }
@@ -1784,6 +1786,7 @@ ojo con este que se usa en varios lados */
         font-size: 1rem;
         height: 8vh;
         width: 65%;
+        
     }
 
     .buscadorModif{
@@ -2028,6 +2031,10 @@ ojo con este que se usa en varios lados */
         align-self:start;
         padding-left:30%;
         font-size:1rem;
+    }
+
+    .info--precioMl{
+        margin-bottom: 4%;
     }
 
 } 
