--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -35,8 +35,9 @@
     </nav>
     
     <section class="buscador">
-        <form class="buscador__formulario">
-            <input class="buscador__formulario--input" type="text" placeholder="encontrá tu cerveza.." autofocus>
+        <form class="buscador__formulario" action="/products/lobuscado" method="POST">
+            <input name="labusqueda" class="buscador__formulario--input" type="text" placeholder="encontrá tu cerveza.." autofocus>
+            <input type="submit">
         </form>
 
         <img class="buscador__lupa" src="/img/lupa.svg" alt="Lupita">
