--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -31,6 +31,8 @@
                 <input class="reg--input" type="password" name="password" placeholder="*******" id="regPassword"  autofocus required>
                 <label for="regConfPassword">Repetir Contraseña</label>
                 <input class="reg--input" type="password" name="regConfPassword" placeholder="*******" id="regConfPassword"  autofocus required>
+                <label for="imagen">Avatar</label>
+                <input type="file" name="imagen" id="imagen">
                 
                 <input class="reg--submit" type="submit" value=<%=typeof usuarioActivo.nombre != "undefined" ? "guardar" :  "Registrarme" %> autofocus>
                 
