submit con jsfront de preindex

--- a/src/views/preindex.ejs
+++ b/src/views/preindex.ejs
@@ -78,7 +78,7 @@
 			<label class="titl__preindex" for="soyMayor"> 
 				<p class="soyMayor--par">soy mayor de 18</p> 
 			</label>
-			<input onChange="this.form.submit()" class="soyMayor--input" value="true" type="checkbox" name="soyMayor" id="soyMayor">
+			<input onChange="this.form.submit()" class="soyMayor--input" type="checkbox" name="soyMayor" id="soyMayor">
 		</form>
 
 	
