comienzo de carrito

--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -3,7 +3,8 @@
 		<%-include('./partials/head.ejs')%>
 
 	<body>
-	<section class="contenedorApp">	
+	<section class="contenedorApp">
+		<script src="/js/carritoMostrar.js" defer></script>
 
 		<%-include('./partials/header.ejs')%>
 
@@ -24,56 +25,16 @@
 									<button class="btn--cant">x1</button>
 									<button class="btn--cant">-</button>
 								</section>
-								<button class="carrito_boton_eliminar">eliminar</button>
+								<a class="carrito__boton__eliminar">eliminar</a>
 					
 							</article>
 							
 					</article>
 				</article>
-					<article class="carrito__producto">
-						<img class="carrito_producto--img" src="/img/products/rubia.jpg" alt="birraA">
-						<article class="carrito_producto__info">
-							<p class= carrito_descripcion_nombre>Rubia 7%</p>
-							<p class= carrito_descripcion> 500ML</p>
-							<section class="carrito_precio">
-								<p class= carrito_descripcion>Unidad: $120</p>
-								<p class= carrito_descripcion>Subtotal: $120</p>
-							</section>
-								<article class="carrito__cant__agregar">
-									<section class="carrito__cantidad">
-										<button class="btn--cant">+</button>
-										<button class="btn--cant">x1</button>
-										<button class="btn--cant">-</button>
-									</section>
-									<button class="carrito_boton_eliminar">eliminar</button>
-						
-								</article>
-								
-						</article>
-					</article>
 				
-					<article class="carrito__producto">
-						<img class="carrito_producto--img" src="/img/products/negra.jpg" alt="birraA">
-						<article class="carrito_producto__info">
-							<p class= carrito_descripcion_nombre>Negra 14%</p>
-							<p class= carrito_descripcion> 500ML</p>
-							<section class="carrito_precio">
-								<p class= carrito_descripcion>Unidad: $120</p>
-								<p class= carrito_descripcion>Subtotal: $120</p>
-							</section>
-								<article class="carrito__cant__agregar">
-									<section class="carrito__cantidad">
-										<button class="btn--cant">+</button>
-										<button class="btn--cant">x1</button>
-										<button class="btn--cant">-</button>
-									</section>
-									<button class="carrito_boton_eliminar">eliminar</button>
-						
-								</article>
-								
-						</article>
-					</article>
-				</article>
+			</article>
+				
+				
 		<article class="carrito_total">
 			<p class="carrito_total_total">TOTAL</p>
 			<p class= "carrito_total_precio">$340</p>
