carrito version rústica

--- a/src/views/products/sumar_producto.ejs
+++ b/src/views/products/sumar_producto.ejs
@@ -58,7 +58,7 @@
             <input class="reg--input" type="number" name="stock" placeholder="STOCK" id="stock" value="<%= typeof oldValues != "undefined" ? oldValues.stock : "" %>"autofocus required>
 
             <label for="laimagen">Imagen</label>
-            <input type="file" name="imagen" id="laimagen">
+            <input class="reg--input" type="file" name="imagen" id="laimagen">
             <!-- Submit -->
             <input class="reg--submit" type="submit" value="GUARDAR" autofocus>            
         
