--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1427,7 +1427,10 @@ ojo con este que se usa en varios lados */
     align-items: center;
 
 }
-
+.buscador--submit{
+   display: none;
+    
+}
 
 @media (min-width: 900px){
 
@@ -2040,6 +2043,17 @@ ojo con este que se usa en varios lados */
         margin-bottom: 4%;
     }
 
+    .buscador--submit{
+        all: unset;
+        cursor: pointer;
+        background-color: #5c8620;
+        border: 3% solid #cacece;
+        font-size: .5rem;
+        font-family: 'Industry';
+        text-align: center;
+        width: 10%;
+        
+    }
 } 
 
  /* esta llave es clave */
