--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -37,7 +37,7 @@
     <section class="buscador">
         <form class="buscador__formulario" action="/products/lobuscado" method="POST">
             <input name="labusqueda" class="buscador__formulario--input" type="text" placeholder="encontrá tu cerveza.." autofocus>
-            <input type="submit">
+            <input class="buscador--submit" type="submit" value="buscar">
         </form>
 
         <img class="buscador__lupa" src="/img/lupa.svg" alt="Lupita">
