arreglo carrito temporario

--- a/src/views/products/producto.ejs
+++ b/src/views/products/producto.ejs
@@ -43,7 +43,7 @@
                         <a class="btn--cant">-</a>
                     </section>
 
-                    <a class="btn--agregar">Agregar</a>
+                    <a id='agremov'class="btn--agregar">Agregar</a>
                      
                 </section>
                      <%} else { %> 
