--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -54,7 +54,8 @@
                             <a class="btn--cant">x1</a>
                             <a class="btn--cant">-</a>
                         </section>
-                        <input style="display: none;" type="number" value=<%= element.id %> name="id" id="">
+                        <input style="display: none;" type="number" value=0 name="cantidad">
+                        <input style="display: none;" type="number" value=<%= element.id %> name="beer_id">
                         <input type="submit" value="Agregar" class="btn--agregar">
                          
                     </form>
