pedido de items a db para pasar a vista

--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -4,7 +4,7 @@
 
 	<body>
 	<section class="contenedorApp">
-		<script src="/js/carritoMostrar.js" defer></script>
+		<!-- <script src="/js/carritoMostrar.js" defer></script> -->
 
 		<%-include('./partials/header.ejs')%>
 
@@ -19,15 +19,6 @@
 							<p class= carrito_descripcion>Unidad: $100</p>
 							<p class= carrito_descripcion>Subtotal: $100</p>
 						</section>
-							<article class="carrito__cant__agregar">
-								<section class="carrito__cantidad">
-									<button class="btn--cant">+</button>
-									<button class="btn--cant">x1</button>
-									<button class="btn--cant">-</button>
-								</section>
-								<a class="carrito__boton__eliminar">eliminar</a>
-					
-							</article>
 							
 					</article>
 				</article>
