--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -7,28 +7,31 @@
 		<!-- <script src="/js/carritoMostrar.js" defer></script> -->
 
 		<%-include('./partials/header.ejs')%>
-
-				<h2 class="mi_carrito">MI CARRITO</h2>
-			<article class="carrito_productos">
-				<article class="carrito__producto">
-					<img class="carrito_producto--img" src="/img/products/ipa.jpg" alt="birraA">
-					<article class="carrito_producto__info">
-						<p class= carrito_descripcion_nombre>IPA 14%</p>
-						<p class= carrito_descripcion> 500ML</p>
-						<section class="carrito_precio">
-							<p class= carrito_descripcion>Unidad: $100</p>
-							<p class= carrito_descripcion>Subtotal: $100</p>
-						</section>
-							
+		
+		<h2 class="mi_carrito">MI CARRITO</h2>
+		<article class="carrito_productos">
+				<%itemsFiltro.forEach(element => { %>
+					
+					<article class="carrito__producto">
+						<img class="carrito_producto--img" src="/img/products/<%= element.beer.imagen %>" alt="birraA">
+						<article class="carrito_producto__info">
+							<p class= carrito_descripcion_nombre><%= element.beer.ibu %>%</p>
+							<p class= carrito_descripcion> <%= element.beer.tamano %>ML</p>
+							<section class="carrito_precio">
+								<p class= carrito_descripcion>Unidad: $<%= element.beer.precio %></p>
+								<p class= carrito_descripcion>Subtotal: $<%= element.subtotal %></p>
+							</section>
+								
+						</article>
 					</article>
-				</article>
+				  <% }); %>
 				
 			</article>
 				
 				
 		<article class="carrito_total">
 			<p class="carrito_total_total">TOTAL</p>
-			<p class= "carrito_total_precio">$340</p>
+			<p class= "carrito_total_precio">$</p>
 		</article>
 		<button class="boton_comprar" type="submit">COMPRAR</button>
 				
