--- a/src/views/products/producto.ejs
+++ b/src/views/products/producto.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <%-include('./partials/head.ejs')%>
 <body>
-<script src="/js/carrito.js" defer></script>
+<!-- <script src="/js/carrito.js" defer></script> -->
 <section class="contenedorApp">
     <%-include('./partials/header.ejs')%>
 
@@ -36,16 +36,17 @@
                 </article>
                 
                 <% if (!admin){ %> 
-                <section class="cont__btn__agregar--pp">
+                <form class="cont__btn__agregar--pp"  action="/products/agregarcarrito" method="POST">
                     <section class="cont__cantidad--pp">
                         <a class="btn--cant">+</a>
                         <a class="btn--cant">x1</a>
                         <a class="btn--cant">-</a>
                     </section>
-
-                    <a id='agremov'class="btn--agregar">Agregar</a>
+                    <input style="display: none;" type="number" value=1 name="cantidad">
+                    <input style="display: none;" type="number" value=<%= birra.id %> name="beer_id">
+                    <input type="submit" value="Agregar" class="btn--agregar">
                      
-                </section>
+                </form>
                      <%} else { %> 
                      <section>
                          <a class="btn--agregar" href="/products/modificarForm/<%= birra.id %>">Modificar</a>
