--- a/src/views/users/perfilUsuario.ejs
+++ b/src/views/users/perfilUsuario.ejs
@@ -22,13 +22,13 @@
         <section>
            <p class=historialUsuario>Historial</p>
         </section>
-        <img src="./img/products/" alt="la imagen">
+        <img src="/img/avatars/<%= usuarioActivo.imagen%>" alt="la imagen">
         <section class="bloque__productos">
         
-            <% if (typeof cervezasElegidas != 'undefined'){ %> 
+            <% if (typeof comprasHechas != 'undefined'){ %> 
                 <% cervezas.forEach(element =>{ %> 
                 <article class="cont__producto">
-                    <img class="producto--img" src="./img/products/<%= element.imagen %>" alt="birraA">
+                    <img class="producto--img" src="/img/products/<%= element.imagen %>" alt="birraA">
                     <article class="producto__info">
                         <p><%= element.nombre + ' ' + element.graduacion %></p>
                         <section class="info--precioMl">
