--- a/src/views/users/perfilUsuario.ejs
+++ b/src/views/users/perfilUsuario.ejs
@@ -11,43 +11,28 @@
             <p class="contenedorPerfil__saludo">Hola <%= usuarioActivo.nombre +" "+ usuarioActivo.apellido%> !! </p> 
         
         
-            <button href="/users/modifUsuario" class="btn--volver">
-                <a class="volverInicio" href="/users/modifUsuario">Editar perfil</a>
-            </button>
+         
+                <a class="btn--volver" href="/users/modifUsuario">Editar perfil</a>
 
-            <button href="index" class="btn--volver">
-                <a class="volverInicio" href="/">Volver al inicio</a>
-             </button></a>
+                <a class="btn--volver" href="/">Volver al inicio</a>
+
+             <img src="/img/avatars/<%= usuarioActivo.imagen%>" alt="la imagen" class="avatar">
         </section>   
-        <section>
+    
            <p class=historialUsuario>Historial</p>
-        </section>
-        <img src="/img/avatars/<%= usuarioActivo.imagen%>" alt="la imagen">
-        <section class="bloque__productos">
+ 
+        <section class="bloque__compras">
         
-            <% if (typeof comprasHechas != 'undefined'){ %> 
-                <% cervezas.forEach(element =>{ %> 
-                <article class="cont__producto">
-                    <img class="producto--img" src="/img/products/<%= element.imagen %>" alt="birraA">
-                    <article class="producto__info">
-                        <p><%= element.nombre + ' ' + element.graduacion %></p>
-                        <section class="info--precioMl">
-                        <p><%= element.mililitros %>ML</p>
-                        <p>$<%= element.precio %></p>
-                        </section>
+            <% if (typeof compras != 'undefined'){ %> 
+                <% compras.forEach(element =>{ %> 
+                    <article class="compra__info info--precioMl">
+                        <p><%= element.createdAt.toLocaleString() %></p>
+                        <p>Cantidad de items:<%= element.cantidad_items %></p>
+                        <p>precio: $<%= element.total %></p>
                     </article>
+        
                     
-                    <article class="cont__cant__agregar">
-                        <section class="cont__cantidad">
-                            <button class="btn--cant">+</button>
-                            <button class="btn--cant">x1</button>
-                            <button class="btn--cant">-</button>
-                        </section>
-                        <button class="btn--agregar">Agregar</button>
-                    </article>
-                    
-                    
-                </article>
+              
                 <% })} else { %> <p>Todavia no compraste nada</p>
                  
              
