--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%-include('./partials/head.ejs')%>
 <body>
-    <!-- <script src="/js/carrito.js" defer></script> -->
+    <script src="/js/cantidad.js" defer></script>
     <section  class="contenedorApp">
 
     <%-include('./partials/header.ejs')%>
@@ -50,12 +50,12 @@
                 <% if (typeof admin == 'undefined'){ %> 
                     <form class="cont__btn__agregar--pp" action="/products/agregarcarrito" method="POST">
                         <section class="cont__cantidad--pp">
-                            <a class="btn--cant">+</a>
-                            <a class="btn--cant">x1</a>
+                            <a class="agregar btn--cant">+</a>
+                            <input class="btn--cant" type="number" value=1 name="cantidad" id="<%= element.id %>">
                             <a class="btn--cant">-</a>
                         </section>
-                        <input style="display: none;" type="number" value=1 name="cantidad">
-                        <input style="display: none;" type="number" value=<%= element.id %> name="beer_id">
+                        <input style="display: none;" type="number" value=<%=element.id%> name="beer_id">
+                       
                         <input type="submit" value="Agregar" class="btn--agregar">
                          
                     </form>
