--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -25,7 +25,7 @@
 							</section>
 							<form action="/products/sacar?_method=DELETE" method="POST">
 								<input type="number" style="display: none;" name="id" value=<%= element.id %>>
-								<input type="submit" value="Borrar" class="boton_comprar">
+								<input type="submit" value="borrar" class="item_borrar">
 							</form>	
 						</article>
 					</article>
