botones de sumar y restar

--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -5,6 +5,7 @@
 	<body>
 	<section class="contenedorApp">
 		<!-- <script src="/js/carritoMostrar.js" defer></script> -->
+		<script src="/js/cantidad.js" defer></script>
 
 		<%-include('./partials/header.ejs')%>
 		
