--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -3,6 +3,7 @@
     <%-include('./partials/head.ejs')%>
     
 <body>
+    <script src="/js/registrofront.js" defer></script>
     <section  class="contenedorApp">
     <%-include('./partials/header.ejs')%>
 
@@ -65,6 +66,7 @@
     <%-include('./partials/footer.ejs')%>
 
 </section>
- <script src="registrofront.js"></script>
+ <script src="/js/registrofront.js"></script>
+ <script src="/js/cantidad.js" defer></script>
 </body>
 </html>
