--- a/src/views/products/producto.ejs
+++ b/src/views/products/producto.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <%-include('./partials/head.ejs')%>
 <body>
+     <script src="/js/cantidad.js" defer></script>
 <!-- <script src="/js/carrito.js" defer></script> -->
 <section class="contenedorApp">
     <%-include('./partials/header.ejs')%>
@@ -38,9 +39,9 @@
                 <% if (!admin){ %> 
                 <form class="cont__btn__agregar--pp"  action="/products/agregarcarrito" method="POST">
                     <section class="cont__cantidad--pp">
-                        <a class="btn--cant">+</a>
-                        <a class="btn--cant">x1</a>
-                        <a class="btn--cant">-</a>
+                        <a class="agregar btn--cant">+</a>
+                        <input class="btn--cant" type="number" min="1" value=1 name="cantidad">
+                        <a class="menos btn--cant">-</a>
                     </section>
                     <input style="display: none;" type="number" value=1 name="cantidad">
                     <input style="display: none;" type="number" value=<%= birra.id %> name="beer_id">
