--- a/src/views/products/producto.ejs
+++ b/src/views/products/producto.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <%-include('./partials/head.ejs')%>
 <body>
-<!-- <script src="/js/carrito.js" defer></script> -->
+<script src="/js/cantidad.js" defer></script>
 <section class="contenedorApp">
     <%-include('./partials/header.ejs')%>
 
@@ -36,14 +36,14 @@
                 </article>
                 
                 <% if (!admin){ %> 
-                <form class="cont__btn__agregar--pp"  action="/products/agregarcarrito" method="POST">
+                <form class="cont__btn__agregar--pp--detalle"  action="/products/agregarcarrito" method="POST">
                     <section class="cont__cantidad--pp">
-                        <a class="btn--cant">+</a>
-                        <a class="btn--cant">x1</a>
-                        <a class="btn--cant">-</a>
+                        <a class="mas btn--cant" id="mas">+</a>
+                        <input readonly class="input btn--cant detallesumar" type="number" min="1" max="20" value=1 name="cantidad" id="input">
+                        <a class="menos btn--cant" id="menos">-</a>
                     </section>
-                    <input style="display: none;" type="number" value=1 name="cantidad">
-                    <input style="display: none;" type="number" value=<%= birra.id %> name="beer_id">
+                    <input type="hidden" value=1 name="cantidad">
+                    <input type="hidden" value=<%= birra.id %> name="beer_id">
                     <input type="submit" value="Agregar" class="btn--agregar">
                      
                 </form>
